# shudong-agent

./: .gitignore  README.md  USAGE.md
.github/instructions/: dart-flutter.instructions.md  dart-rust-integration.instructions.md  rust-ffi.instructions.md  testing-documentation.instructions.md
.github/prompts/: project-completion.prompt.md
app/: pubspec.yaml
app/lib/: main.dart  rust_core.dart
core/: Cargo.toml  README.md
core/src/: lib.rs
