[package]
name = "shudong_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "shudong_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
rig-core = "0.37"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
regex = "1.10"
